Moved map again to the top and fixed spacing issue on smaller screen.

--- a/src/common.scss
+++ b/src/common.scss
@@ -348,6 +348,15 @@ button {
   .fs-lg-28 {
     font-size: 28px !important;
   }
+
+  .pt-xl-5 {
+    padding-top: 2rem !important;
+  }
+
+  .mx-xl-5 {
+    margin-left: 1rem !important;
+    margin-right: 1rem !important;
+  }
 }
 
 .text-primary {
